--- a/src/sass/_video.sass
+++ b/src/sass/_video.sass
@@ -7,13 +7,21 @@ $shadow-size: 2px
 .videos-grid
   display: flex
   flex-wrap: wrap
-  flex: 1 1 25%
+  flex: 1 1 100%
 
   @media (orientation: portrait)
-    flex-direction: column
+    flex-direction: columnA
+
+  &.videos-grid-aspect-ratio
+    justify-content: center
+    align-items: center
+    align-self: center
+
+  &.videos-grid-aspect-ratio .video-container
+    flex-grow: 0
 
 .video-container
-  background-color: rgba($color-bg, 0.8)
+  background-color: rgba(black, 0.3)
   box-shadow: 0px 0px 1px rgba(black, 0.3)
   position: relative
   display: flex
