--- a/src/sass/_dropdown.sass
+++ b/src/sass/_dropdown.sass
@@ -20,7 +20,6 @@
   visibility: hidden
   opacity: 0
   position: absolute
-  bottom: 100%
   right: 0
   list-style-type: none
   padding: 0
@@ -28,6 +27,12 @@
   box-shadow: 0 0 3px rgba(black, 0.1)
   user-select: none
   z-index: $z-index-dropdown
+
+  bottom: 100%
+
+  &.dropdown-list-below
+    bottom: auto
+    top: 100%
 
   li
     display: block
