--- a/src/sass/_video.sass
+++ b/src/sass/_video.sass
@@ -4,28 +4,42 @@ $shadow-size: 2px
 .videos
   white-space: nowrap
 
-.videos-grid
+.videos-grid-flex
   display: flex
   flex-wrap: wrap
   flex: 1 1 100%
 
   @media (orientation: portrait)
-    flex-direction: columnA
+    flex-direction: column
 
-  &.videos-grid-aspect-ratio
-    justify-content: center
-    align-items: center
-    align-self: center
+  .video-container
+    flex: 1 1 100%
+    flex-grow: 1
 
-  &.videos-grid-aspect-ratio .video-container
+.videos-grid-aspect-ratio
+  display: flex
+  flex: 1 1 100%
+  overflow: hidden
+  justify-content: center
+  align-items: center
+
+  .video-container
     flex-grow: 0
+
+.videos-grid-aspect-ratio-container
+  display: flex
+  align-self: center
+  flex: 1 1 100%
+  flex-wrap: wrap
+  justify-content: center
+  align-items: center
+  overflow: hidden
 
 .video-container
   background-color: rgba(black, 0.3)
   box-shadow: 0px 0px 1px rgba(black, 0.3)
   position: relative
   display: flex
-  flex-grow: 1
 
   .video-footer
     position: absolute
@@ -65,24 +79,26 @@ $shadow-size: 2px
     width: 100%
     height: 100%
 
+  &.mirrored video
+    transform: rotateY(180deg)
+    -webkit-transform: rotateY(180deg)
+    -moz-transform: rotateY(180deg)
+
 .videos-toolbar
-  position: absolute
-  z-index: $z-index-videos-toolbar
-  left: 0
-  right: 0
+  // position: absolute
+  // z-index: $z-index-videos-toolbar
+  // left: 0
+  // right: 0
+  height: 20%
+  max-height: 250px
   display: flex
   flex-wrap: nowrap
-  justify-content: flex-end
+  justify-content: center
   overflow-x: auto
-  overflow-y: hidden
+  // overflow-y: hidden
   padding-bottom: 1px
 
 .videos-toolbar .video-container
-  flex: 0 0 $video-size
+  // flex: 0 0 $video-size
   width: $video-size
   height: $video-size
-
-.video-container.mirrored video
-  transform: rotateY(180deg)
-  -webkit-transform: rotateY(180deg)
-  -moz-transform: rotateY(180deg)
