--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -141,9 +141,18 @@ body.call
   display: flex
   flex: 1 1 100%
 
+  // The following is important for .videos-grid-aspect-ratio
+  max-width: 100%
+  max-height: 100%
+
 .app
   display: flex
+  flex-direction: column
   flex: 1 1 100%
+
+  // The following is important for .videos-grid-aspect-ratio
+  max-width: 100%
+  max-height: 100%
 
   @import '_alert'
   @import '_notification'
