Add support for fixed dropdown
We can now have a menu on the top videos toolbar that flips over the
edge of the parent container with defined height. On the other side,
this position is only defined once so if a window is resized, the
fixed-positioned dropdown will stay in place. We have a dropdown
backdrop so it's not the end of the world, but it's a compromise.

--- a/src/sass/_dropdown.sass
+++ b/src/sass/_dropdown.sass
@@ -30,9 +30,10 @@
 
   bottom: 100%
 
-  &.dropdown-list-below
+  &.dropdown-list-fixed
+    position: fixed
     bottom: auto
-    top: 100%
+    right: auto
 
   li
     display: block
