Add sidebar actions and reducer

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -181,8 +181,7 @@ body.call
   opacity: 0.01
   transition: opacity 100ms ease-in
 
-// TODO rename to sidebar-visible
-.app .chat-visible
+.app .sidebar-visible
   right: 320px
 
   @media (max-width: 375.98px)
